modules/nixos/features/k8s/bootstrap/resources/cilium.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  annotations:
    io.cilium/lb-ipam-ips: "192.168.2.128"
    cert-manager.io/cluster-issuer: letsencrypt-luukvdm-dev
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

  - name: https-wildcard
    protocol: HTTPS
    port: 443
    hostname: "*.luukvdm.dev"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: luukvdm-wildcard-tls
